--- a/proticket-client/src/components/Utente/UtentePage.css
+++ b/proticket-client/src/components/Utente/UtentePage.css
@@ -49,6 +49,7 @@ body {
   border-radius: 15px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-align: center; /* Centralize o texto */
 }
 
 .card:hover {
@@ -111,4 +112,10 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Estilo do QR Code */
+.qr-code {
+  margin-top: 20px;
+  text-align: center;
 }
