--- a/proticket-client/src/components/Funcionario/FuncionarioPage.css
+++ b/proticket-client/src/components/Funcionario/FuncionarioPage.css
@@ -1,5 +1,3 @@
-/* FuncionarioPage.css */
-
 /* Estilos gerais para a página do funcionário */
 body {
   margin: 0;
@@ -136,11 +134,49 @@ button:hover {
 /* Estilo do container de botões */
 .button-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 20px; /* Espaçamento entre os botões */
 }
 
 .fila {
-  margin-bottom: 40px; /* Aumente a margem inferior para garantir espaço suficiente */
   text-align: center; /* Centralize o texto */
+}
+
+/* Estilo da barra lateral */
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  background-color: #f4f4f4;
+  width: 200px;
+  position: fixed;
+  top: 120px; /* Ajuste a posição para ficar abaixo do header */
+  left: 20px;
+  height: calc(100vh - 140px); /* Ajuste a altura para evitar sobreposição com o header */
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+
+.sidebar button {
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.sidebar button:hover {
+  background-color: #0056b3;
+  transform: translateY(-3px);
+}
+
+/* Estilo do conteúdo principal */
+.content {
+  flex: 1;
+  padding: 20px;
+  margin-left: 240px; /* Espaço para a barra lateral */
 }
