--- a/proticket-client/src/components/Funcionario/AcompanhamentoPage.css
+++ b/proticket-client/src/components/Funcionario/AcompanhamentoPage.css
@@ -40,14 +40,11 @@ body {
 }
 
 /* Estilo do conteúdo principal */
-.content {
+.main-content {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start; /* Alinhe à esquerda */
-  justify-content: center;
-  width: 60%; /* Ajuste a largura conforme necessário */
-  margin-right: 20px; /* Adicione margem direita para espaço da publicidade */
-  margin-left: 20px; /* Adicione margem esquerda para puxar o card mais para a esquerda */
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
 }
 
 /* Estilo do card */
@@ -59,6 +56,9 @@ body {
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   text-align: center; /* Centralize o texto */
+  flex: 1;
+  max-width: 600px; /* Ajuste a largura máxima do card */
+  margin-right: 20px; /* Espaço entre o card e a publicidade */
 }
 
 .card:hover {
@@ -130,12 +130,9 @@ button:hover {
 
 /* Estilo da publicidade */
 .publicidade {
-  position: absolute;
-  top: 50%; /* Centralize verticalmente */
-  right: 20px; /* Ajuste conforme necessário */
-  transform: translateY(-50%); /* Centralize verticalmente */
-  width: 350px; /* Aumente a largura conforme necessário */
+  width: 350px; /* Ajuste conforme necessário */
   text-align: center; /* Centralize o texto */
+  margin-left: 40px; /* Adicione margem esquerda para puxar a publicidade mais para a direita */
 }
 
 .publicidade h3 {
